# spacedock

./: .gitignore  readme.md
.github/workflows/: cpp.yaml  python.yaml
cpp/: CMakeLists.txt  library.properties  readme.md
cpp/examples/: CMakeLists.txt  main.cpp
cpp/gtests/: CMakeLists.txt
docs/: co-author.md
layout/cpp/: CMakeLists.txt
layout/cpp/src/: header.hpp
layout/pi_pico/: CMakeLists.txt
layout/python/project/: __init__.py
layout/python/tests/: test_project.py
module/: LICENSE  pyproject.toml  readme.md
module/spacedock/: __init__.py  spacedock.py
module/spacedock/templates/cpp/: CMakeLists.txt.jinja  cpp.yaml
module/spacedock/templates/python/: pyproject.toml.jinja  python.yaml
pi_pico/: format-code.sh  load.sh  readme.md
pi_pico/src/: main.cpp
python/: pyproject.toml
spacedock/: project.yaml  spacedock.py
spacedock/templates/: gitignore.jinja
