[tool.poetry]
name = "spacedock"
version = "0.0.1"
description = ""
authors = ["walchko <walchko@users.noreply.github.com>"]
readme = "readme.md"
license = "MIT"
homepage = "https://pypi.org/project/spacedock"
repository = 'http://github.com/walchko/spacedock'
# documentation = "http://..."
keywords = ["cpp", "python"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Libraries :: Application Frameworks'
]

[tool.poetry.dependencies]
python = ">=3.10"
colorama = "*"
pyyaml = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[tool.poetry.scripts]
my_package_cli = 'project.console:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
